--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+########################
+### create-react-app ###
+########################
 
 # dependencies
 /node_modules
@@ -21,3 +23,25 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+################
+### IntelliJ ###
+################
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
