--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "@types/react": "^16.9.55",
         "@types/lodash": "^4.14.164",
         "@types/react-dom": "^16.9.9",
+        "@types/react-router-dom": "^5.1.6",
         "lodash": "^4.17.20",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "typescript": "^4.0.5",
         "web-vitals": "^0.2.4"
