--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "@types/react": "^16.9.55",
         "@types/lodash": "^4.14.164",
         "@types/react-dom": "^16.9.9",
+        "@types/react-modal": "^3.10.6",
         "@types/react-router-dom": "^5.1.6",
         "lodash": "^4.17.20",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-modal": "^3.12.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "typescript": "^4.0.5",
